refactor(service): since I forgot to add the attribute relation with Post i had to refactor the service implementation class